fixed layout overflow issue

--- a/app/assets/stylesheets/pages/_outfitIndex.scss
+++ b/app/assets/stylesheets/pages/_outfitIndex.scss
@@ -3,4 +3,5 @@ h6 {
   position: relative;
   left: 20px;
   margin-bottom: 20px;
+  display: inline-block;
 }
